samples/_failures_safe/1761422034_c953e0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_528f51bd.c: In function ‘handle_event’:
./samples/SAFE/__tmp_528f51bd.c:149:13: error: expected declaration or statement at end of input
  149 |             success = process_data(sm);
      |             ^~~~~~~
./samples/SAFE/__tmp_528f51bd.c:149:13: error: expected declaration or statement at end of input
